--- a/index.html
+++ b/index.html
@@ -28,20 +28,14 @@
     </div>
 
     <!-- Music Control -->
-    <!-- <div class="music-control" onclick="toggleMusic()">
-        <span id="music-icon">🎵</span>
-        <audio id="bg-music" loop>
-            <source src="TJ Monterde - Ikaw at Ako (Lyrics).mp3" type="audio/mpeg">
-        </audio>
-    </div> -->
-
-    <!-- Music Control Button -->
     <div class="music-control" onclick="toggleMusic()">
         <span id="music-icon">🎵</span>
-        <!-- The invisible YouTube Player -->
-        <div id="legal-player"></div>
+        <audio id="bg-music" loop preload="auto">
+            <source
+                src="https://res.cloudinary.com/dtxbngnr7/video/upload/v1772294389/wedding-invitation-premium-song_wonlxw.mp3"
+                type="audio/mpeg">
+        </audio>
     </div>
-
 
     <!-- 1. Hero Section -->
     <header class="hero">
@@ -183,29 +177,6 @@
     </section>
 
     <!-- 7. Photo Gallery -->
-    <!-- <section class="gallery" id="gallery">
-        <h2 data-aos="fade-up">Enchanted Moments</h2>
-        <div class="gallery-grid">
-            <div class="gallery-item" data-aos="zoom-in">
-                <img src="https://images.unsplash.com/photo-1511285560929-80b456fea0bc?auto=format&fit=crop&q=80&w=600"
-                    alt="Gallery 1">
-            </div>
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-                <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?auto=format&fit=crop&q=80&w=600"
-                    alt="Gallery 2">
-            </div>
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-                <img src="https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&q=80&w=600"
-                    alt="Gallery 3">
-            </div>
-            <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-                <img src="https://images.unsplash.com/photo-1510076857177-7470076d4098?q=80&w=600&auto=format&fit=crop"
-                    alt="The Royal Celebration">
-            </div>
-        </div>
-    </section> -->
-
-    <!-- 7. Photo Gallery -->
     <section class="gallery" id="gallery">
         <h2 data-aos="fade-up">Enchanted Moments</h2>
 
@@ -296,7 +267,7 @@
     </section>
 
     <!-- 10. RSVP Section -->
-    <section class="rsvp" id="rsvp">
+    <!-- <section class="rsvp" id="rsvp">
         <div class="rsvp-container" data-aos="flip-left">
             <h2>Will You Join Our Fairytale?</h2>
             <p>Kindly confirm by May 20, 2026</p>
@@ -319,8 +290,35 @@
                 </button>
             </form>
         </div>
-    </section>
+    </section> -->
 
+    <!-- 10. RSVP Section -->
+    <section class="rsvp" id="rsvp">
+        <div class="rsvp-container" data-aos="flip-left">
+            <h2>Will You Join Our Fairytale?</h2>
+            <p>Kindly confirm by May 20, 2026</p>
+
+            <form id="rsvp-form">
+                <!-- name attribute must match the Google Script -->
+                <input type="text" name="guest_name" placeholder="Your Full Name" required>
+
+                <input type="number" name="guest_count" placeholder="Number of Guests Attending" min="1" max="5"
+                    required>
+
+                <select name="attendance_status" required>
+                    <option value="" disabled selected>Kindly confirm your presence</option>
+                    <option value="Attending">With joy, I will celebrate with you</option>
+                    <option value="Declined">Regretfully, I send my warm wishes</option>
+                </select>
+
+                <textarea name="message" placeholder="Leave a heartfelt message for the bride & groom"></textarea>
+
+                <button type="submit" class="btn-gold" id="rsvp-submit-btn">
+                    Send Your Word
+                </button>
+            </form>
+        </div>
+    </section>
 
     <footer>
         <p class="initials">A & I</p>
@@ -339,8 +337,6 @@
     </button>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
-    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="script.js"></script>
 </body>
 
