--- a/index.html
+++ b/index.html
@@ -7,24 +7,46 @@
     <title>The Royal Wedding | Alexander & Isabella</title>
 
     <!-- Social Media Preview (Open Graph) -->
+    <!-- <meta property="og:title" content="The Royal Wedding | Alexander & Isabella">
+    <meta property="og:description"
+        content="Once upon a time, two souls became one... You are cordially invited to celebrate our happily ever after.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://maria-leaa.github.io/wedding-invitation-premium/"> -->
+
+    <!-- YOUR CLOUDINARY COVER IMAGE -->
+    <!-- <meta property="og:image"
+        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png"> -->
+
+    <!-- Best dimensions for Messenger/Facebook -->
+    <!-- <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630"> -->
+
+    <!-- Twitter/X Preview -->
+    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image"
+        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png"> -->
+
+
+    <!-- Social Media Preview (Open Graph) -->
     <meta property="og:title" content="The Royal Wedding | Alexander & Isabella">
     <meta property="og:description"
         content="Once upon a time, two souls became one... You are cordially invited to celebrate our happily ever after.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://maria-leaa.github.io/wedding-invitation-premium/">
 
-    <!-- YOUR CLOUDINARY COVER IMAGE -->
+    <!-- THE FIX: Added Secure URL, Image Type, and Cache Buster (?v=1) -->
     <meta property="og:image"
-        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png">
-
-    <!-- Best dimensions for Messenger/Facebook -->
+        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png?v=1">
+    <meta property="og:image:secure_url"
+        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png?v=1">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <!-- Twitter/X Preview -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image"
-        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png">
+        content="https://res.cloudinary.com/dtxbngnr7/image/upload/v1772298099/wedding-invitation-premiun-cover_bwzc3i.png?v=1">
 
     <!-- Google Fonts -->
     <link
