--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         <p>© 2026 Alexander & Isabella. All rights reserved.</p>
 
         <!-- Music Copyright Credit -->
-        <p class="music-credit">Music: Ikaw at Ako by TJ Monterde. For portfolio use only.</p>
+        <!-- <p class="music-credit">Music: Ikaw at Ako by TJ Monterde. For portfolio use only.</p> -->
     </footer>
 
     <button id="backToTop" title="Return to Top">
